# ict_agent

./: .dockerignore  .env.example  .gitignore  CONFIGURATION_STATUS.md  OAUTH2_MIGRATION.md  PROJECT_KNOWLEDGE_BASE.md  QUICK_SETUP.md  README.md  STAGES_IMPLEMENTATION.md  STAGE_CHANGES.md  TESTING_STAGES.md  WINDOWS_FIXES.md  __init__.py  app.py  check_supabase_courses.py  course_details_rows.csv  create_new_prompt.py  docker-compose.prod.yml  docker-compose.prod.yml.example  docker-compose.yml  pyproject.toml  supabase_schema.sql  test_all_courses_fees.json  test_all_courses_second.json  test_fetch_course_details.py  test_gender_neutral.json  test_pricing_response.json  test_professor_response.json  test_stages.bat  test_stages.py  test_supabase_access.py  test_supabase_lead_append.py  upload_courses_to_supabase.py
.claude/: settings.local.json
api/: __init__.py
config/: prompt.txt  templates.json
core/: __init__.py  agent.py  background_tasks.py  context_injector.py  memory.py  sheets_cache.py  supabase_service.py  template_manager.py
docker/: Dockerfile  entrypoint.sh
docs/: DOCKER_PRODUCTION.md  GOOGLE_SHEETS_CACHING_IMPLEMENTATION.md  GOOGLE_SHEETS_WEBHOOK_SETUP.md  NGINX_SETUP.md  PRODUCTION_OPTIMIZATIONS.md  SETUP_COMPLETE_GUIDE.md  SETUP_OAUTH2.md
nginx/: nginx.conf  nginx.conf.example
scripts/: google_apps_script.js  run_api.py  setup_oauth2.py
static/: admin.html
tests/: __init__.py  conftest.py  test_agent.py  test_app.py  test_sheets_tools.py  test_supabase_service_leads.py  test_supabase_tools.py  test_template_tools.py
tools/: __init__.py  create_pinecone_index.py  mcp_rag_tools.py  pinecone_tools.py  sheets_tools.py  supabase_tools.py  template_tools.py
(+1 files in other folders)
